--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://Danielsan:D%40n34375497@cluster0.tfz5zdu.mongodb.net/barberpro?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://Danielsan:<D%40n34375497>@cluster0.tfz5zdu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=c23a1fa2-7744-4523-8671-0c45386adb5e
 
