--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
     "mongoose": "^8.16.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/D4ni3lsan0502/Apps-dev.git"
   }
 }
